More syntax highlighting, better info when no parameters are passed

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "edion": "node dist/bin/cli.js"
   },
-  "author": "",
+  "author": "Lucasion",
   "license": "ISC",
   "description": "",
   "devDependencies": {
