--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "edion",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "dist/main.js",
   "bin": {
     "edi": "dist/bin/cli.js"
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "keypress": "^0.2.1"
+    "keypress": "^0.2.1",
+    "node-ssh": "^11.1.1"
   },
   "repository": {
     "url": "https://github.com/LucasionGS/edion"
